- arrows for sorting in table head - active item in pagination - fixed vertical align of table info

--- a/src/assets/scss/dashboard/_datatables.scss
+++ b/src/assets/scss/dashboard/_datatables.scss
@@ -1,4 +1,43 @@
 .dataTables_wrapper{
+  thead{
+    .sorting{
+      position: relative;
+      &:after{
+        position: absolute;
+        right: 0;
+        bottom: 5px;
+        content: "\e92d";
+        font-family: 'feather' !important;
+      }
+      &:before{
+        position: absolute;
+        right: 0;
+        top: 5px;
+        content: "\e930";
+        font-family: 'feather' !important;
+      }
+    }
+    .sorting_desc{
+      position: relative;
+      &:after{
+        position: absolute;
+        right: 0;
+        bottom: 5px;
+        content: "\e92d";
+        font-family: 'feather' !important;
+      }
+    }
+    .sorting_asc{
+      position: relative;
+      &:after{
+        position: absolute;
+        right: 0;
+        top: 5px;
+        content: "\e930";
+        font-family: 'feather' !important;
+      }
+    }
+  }
   .table{
     border-top: $card-border-width solid $card-border-color;
     border-bottom: $card-border-width solid $card-border-color;
@@ -33,6 +72,9 @@
     .paginate_button{
       margin: 0 0.2rem;
       @extend .btn, .btn-secondary;
+      &.current{
+        @extend .btn, .btn-primary;
+      }
     }
   }
   .dataTables_info {
@@ -40,5 +82,6 @@
     float: left;    
     margin: 1rem 1.5rem;
     color: $body-color;
+    line-height: 38px;
   }
 }
